Fix: AI features, rate limiting, error handling, security hardening
Backend changes:
- GeminiService: Add exponential back-off retry for Groq 429 rate limits
- InterviewService: Add /interview/chat endpoint for communication practice
- RoadmapService: Parse and persist dailyPlan field
- GlobalExceptionHandler: Return specific user-facing error messages
- CorsConfig: Allow all localhost variants for dev
- SecurityConfig: Add /health to public endpoints
- HealthController: Fix endpoint path, add status response
- Roadmap model + DTO: Add DayTask / DayTaskDTO for daily plan

Frontend changes:
- api.js: Enhanced error interceptor with specific messages per HTTP code
- AuthContext: Fix token persistence race condition on page refresh
- App.jsx: Add /aptitude and /communication routes
- Sidebar: Add Aptitude and Communication nav links
- ResumeAnalysisPage: Fix hardcoded localhost URL in file upload
- CommunicationPage: Use shared Axios instance instead of raw fetch
- AptitudePage: Add 75-question offline aptitude bank

Security:
- .gitignore: Comprehensive secret file exclusions
- frontend/.env.production: Remove from git tracking
- All .env.example files: Updated with correct GROQ_API_KEY variable name